Fixed scrollBar home

--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -36,7 +36,10 @@
 html, body{
     width: 100%;
     height: 100%;
-    margin:0;
+    margin: 0;
+}
+body::-webkit-scrollbar{
+    display: none;
 }
 
 .row {
@@ -72,8 +75,12 @@ html, body{
     padding:35px;
     overflow-x: scroll;
 
+
 }
 
+.background-content::-webkit-scrollbar{
+    display:none;
+}
 
 /*----Content Section--*/
 
